# universal-second-brain

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: operations.md  setup.md
src/second_brain/: __init__.py  automation.py  cli.py  config.py  integrations.py  operations.py  paths.py  providers.py  scheduler.py  vault.py
tests/: test_automation.py  test_config.py  test_integrations.py  test_operations.py  test_scheduler.py  test_vault.py
